--- a/Source/static/css/draggable_list.css
+++ b/Source/static/css/draggable_list.css
@@ -8,17 +8,18 @@ body .list {
     color: #cecece;
   }
   body .list .input {
-    outline: none;
+    /* outline: none;
     border: 1px solid white;
     background-color: #53a8e6;
     color: white;
-    height: 50px;
+    height: 50px; */
     width: 250px;
-    padding-left: 10px;
+    /* padding-left: 10px;
     font-family: "Raleway", sans-serif;
     font-weight: 800;
     font-size: 16px;
-    margin-left: -5px;
+    margin-left: -5px; */
+    display: inline-block;
   }
   body .list span {
     position: absolute;
