--- a/Source/static/css/run_stage_definition.css
+++ b/Source/static/css/run_stage_definition.css
@@ -1,5 +1,5 @@
 .main-selectors-div{
-    margin-top: 15px;
+    margin-top: 30px;
     /* margin-bottom: 10px; */
     /* padding-bottom: 20px; */
 }
@@ -103,6 +103,7 @@
   font-size: 2rem;
   margin-top: 25px;
   margin-left: 30px;
+  color: black;
   /* padding: 0 ; */
 }
 
@@ -115,11 +116,37 @@
   margin-top: 25px;
 }
 
-.main-form-small{
+.main-form-analyse{
   height: 500px;
+}
+
+.main-form-run{
+  height: 600px;
+  width: 900px;
 }
 
 .list-div{
   overflow-y: scroll;
   height: 300px;
+}
+/* 
+.modal-fix-width-label{
+  width: 125px;
+  text-align: right;
+} */
+
+.form-inline .modal-fix-width-label{
+  width: 125px;
+  display: inline-block;
+  text-align: right;
+  margin-right: 15px;
+}
+
+#Adnvaced_defintions_modal .form-inline{
+  margin-top: 15px;
+}
+.modal-content{
+  width: 600px; 
+  margin-left:auto; 
+  margin-right:auto;
 }
