--- a/Source/templates/run_stage_definition.html
+++ b/Source/templates/run_stage_definition.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block main_form %}
-<div id="run_stage_div" hidden="hidden">
+<div id="run_stage_div">
     <div class="form-inline">
       <h2 class="mx-auto stage-headline displayInline"> Run System Stage</h2>
       <a href="" role="button" class = "displayInline medium-margin-right medium-icon" ><i class="fas fa-check-circle green-control"></i></a>
@@ -135,7 +135,7 @@
     </div>
 </div>
 
-<div  id="analyse_stage_div">
+<div  id="analyse_stage_div" hidden="hidden">
   <div class="form-inline">
     <h2 class="mx-auto stage-headline displayInline">Analyse Stage</h2>
     <!-- <a href="" role="button" class = "displayInline medium-margin-right medium-icon" ><i class="fas fa-check-circle green-control"></i></a> -->
@@ -147,7 +147,7 @@
       <!-- <h1>Select a group</h1> -->
       <div class="list" >
         <div>
-          <input list='some_datalist' type="text" class="input" placeholder="Add a group to your list"/>
+          <input list='some_datalist' type="text" class="input form-control" placeholder="Add a group to your list"/>
           <div class="add"><input class="btn btn-sm btn-primary" type="button" value="add"></div>
         </div>
           <datalist id='some_datalist'>
@@ -184,7 +184,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="exampleModalLongTitle">Advanced Run Setting</h5>
-              <a href="" role="button" class="ml-3 mt-1"><i class="far fa-sync-alt"></i></a>
+              
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -202,6 +202,7 @@
                       <option value="AutoUserCmd_File3"></option>
                   </datalist>
                   <a href="" role="button"><i class="far fa-eye"></i></a>
+                  <a href="" role="button" class="ml-auto mb-auto" data-toggle="tooltip" title="Some tooltip text!"><i class="fas fa-check-circle green-control"></i></a>
                 </div>
                 <div class="form-inline">
                   <div class="mr-3 form-check mb-auto mt-2">
@@ -209,9 +210,18 @@
                       <label class="form-check-label" for="useFMC_cb"><h6>use FMC</h6></label>
                   </div>
                   <div>
-                    Config file: <input class="form-control" type="text" name="" id="fmc_config_file_input"><br>
-                    Connections file: <input class="form-control" type="text" name="" id="fmc_connections_file_input"><br>
-                    Scenario file: <input class="form-control" type="text" name="" id="fmc_scenario_file_input"><br>
+                    <div class="form-inline">
+                      <label for="fmc_config_file_input" class="modal-fix-width-label">Config file</label>
+                      <input class="form-control" type="text" name="" id="fmc_config_file_input">
+                    </div>
+                    <div class="form-inline" >
+                      <label for="fmc_connections_file_input" class="modal-fix-width-label">Connections file</label>
+                      <input class="form-control" type="text" name="" id="fmc_connections_file_input"><br>
+                    </div>
+                    <div class="form-inline">
+                      <label for="fmc_scenario_file_input" class="modal-fix-width-label">Scenario file</label>
+                      <input class="form-control" type="text" name="" id="fmc_scenario_file_input"><br>
+                    </div>
                   </div>
                 </div>
                 <div class="form-inline">
