--- a/Source/templates/infras.html
+++ b/Source/templates/infras.html
@@ -11,11 +11,11 @@
 {% endblock %}
 
 {%block content%}
-    
+
 
 <div class="main_form">
     <div class="row layout-buttons-div">
-        <input type="checkbox" checked data-toggle="toggle" data-on="New" data-off="Existing" data-onstyle="primary" data-offstyle="secondary">
+        <input id = "project_toggle" type="checkbox" checked data-toggle="toggle" data-on="New" data-off="Existing" data-onstyle="primary" data-offstyle="secondary">
         <a href="" role="button" aria-label="Save"><i class="far fa-save normal-size" ></i></a>
         <a href="" role="button"><i class="far fa-trash-alt adapt-icon-size"></i></a>
     </div>
@@ -33,7 +33,7 @@
     </div>
 
     <hr>
-    
+
     <div class="row layout-buttons-div">
         <input type="checkbox" checked data-toggle="toggle" data-on="New" data-off="Existing" data-onstyle="primary" data-offstyle="secondary">
         <a href="" role="button" aria-label="Save"><i class="far fa-save normal-size" ></i></a>
@@ -83,7 +83,7 @@
         <div class="col-5 mb-auto second-column">
             <div class="form-inline">
                 <label for="version_input"><h5>Version</h5></label>
-                <input type="text" id="version_input" class="form-control medium-margin"> 
+                <input type="text" id="version_input" class="form-control medium-margin">
             </div>
             <div class="form-inline">
                 <label for="recording_db_ip"><h5>Recording DB IP</h5></label>
@@ -120,5 +120,7 @@
 </div>
 {% endblock %}
 {%block scripts%}
+
+<script src="../static/js/infras.js"></script>
 
 {% endblock %}
