save and update for project in infras window

--- a/Source/templates/infras.html
+++ b/Source/templates/infras.html
@@ -16,16 +16,16 @@
 <div class="main_form">
     <div class="row layout-buttons-div">
         <input id = "project_toggle" type="checkbox" checked data-toggle="toggle" data-on="New" data-off="Existing" data-onstyle="primary" data-offstyle="secondary">
-        <a href="" id = "Save_Project" role="button" aria-label="Save"><i class="far fa-save normal-size" ></i></a>
-        <a href="" id = "Delete_Project" role="button"><i class="far fa-trash-alt adapt-icon-size"></i></a>
+        <button id = "Save_Project" aria-label="Save"><i class="far fa-save normal-size" ></i></button>
+        <button id = "Delete_Project" role="button"><i class="far fa-trash-alt adapt-icon-size"></i></button>
     </div>
     <div class="form-inline">
         <label for="project_select"><h3>Project</h3></label>
-        <select name="" id="project_select" class="form-control medium-margin input-medium-size">
-            <option value="Project1">Project1</option>
+        <input name="" id="project_select" class="form-control medium-margin input-medium-size">
+            <!-- <option value="Project1">Project1</option>
             <option value="Project2">Project2</option>
             <option value="Project3">Project2</option>
-        </select>
+        </select> -->
     </div>
     <div class="form-inline">
         <label for="output-dir"><h5>Output directory:</h5></label>
