--- a/Source/templates/infras.html
+++ b/Source/templates/infras.html
@@ -36,9 +36,9 @@
 
     <div class="row layout-buttons-div">
         <input type="checkbox" id = "site_toggle" checked data-toggle="toggle" data-on="New" data-off="Existing" data-onstyle="primary" data-offstyle="secondary">
-        <a href=""  id="Save_Site" role="button" aria-label="Save"><i class="far fa-save normal-size" ></i></a>
-        <a href=""  id="Duplicate_Site" role="button"><i class="far fa-file-alt adapt-icon-size"></i></a>
-        <a href=""  id="Delete_Site" role="button"><i class="far fa-trash-alt adapt-icon-size"></i></a>
+        <button  id="Save_Site" aria-label="Save"><i class="far fa-save normal-size" ></i></button>
+        <button  id="Duplicate_Site"><i class="far fa-file-alt adapt-icon-size"></i></button>
+        <button  id="Delete_Site"><i class="far fa-trash-alt adapt-icon-size"></i></button>
     </div>
     <div class="row site-data-div">
         <div class="col-5 mb-auto first-column">
@@ -95,7 +95,7 @@
                     <option value="Site3">IP3</option>
                 </select> -->
                 <!-- <a href="" class="medium-margin" role="button"><i class="far fa-edit"></i></a> -->
-                <a href="" id = "check_Recording_DB_IP" class="medium-margin" role="button"><i class="far fa-check-square"></i></a>
+                <button  id = "check_Recording_DB_IP" class="medium-margin"><i class="far fa-check-square"></i></button>
             </div>
             <div class="form-inline">
                 <label for="excersice_db_ip"><h5>Excersice DB IP</h5></label>
@@ -107,7 +107,7 @@
                     <option value="Site3">IP3</option>
                 </select>
                 <a href="" class="medium-margin" role="button"><i class="far fa-edit"></i></a> -->
-                <a href="" id="check_excersice_db_ip" class="medium-margin" role="button"><i class="far fa-check-square"></i></a>
+                <button id="check_excersice_db_ip" class="medium-margin" ><i class="far fa-check-square"></i></button>
             </div>
             <div class="form-inline">
 
