--- a/Source/templates/infras.html
+++ b/Source/templates/infras.html
@@ -20,15 +20,11 @@
         <button id = "Delete_Project" role="button"><i class="far fa-trash-alt adapt-icon-size"></i></button>
     </div>
     <div class="form-inline">
-        <label for="project_select"><h3>Project</h3></label>
+        <label for="project_select" class="project-label"><h3>Project</h3></label>
         <input name="" id="project_select" class="form-control medium-margin input-medium-size">
-            <!-- <option value="Project1">Project1</option>
-            <option value="Project2">Project2</option>
-            <option value="Project3">Project2</option>
-        </select> -->
     </div>
     <div class="form-inline">
-        <label for="output-dir"><h5>Output directory:</h5></label>
+        <label for="output-dir" class="project-label"><h5>Output directory:</h5></label>
         <input type="text" class="form-control medium-margin" id="output-dir">
     </div>
 
@@ -44,11 +40,7 @@
         <div class="col-5 mb-auto first-column">
             <div class="form-inline">
                 <label for="site_select"><h3>Site</h3></label>
-                <select name="" id="site_select" class="form-control medium-margin input-medium-size">
-                    <option value="Site1">Site1</option>
-                    <option value="Site2">Site2</option>
-                    <option value="Site3">Site3</option>
-                </select>
+                <input id="site_select" class="form-control medium-margin input-medium-size">
                 <div class="form-check-inline medium-margin">
                     <input type="checkbox" class="form-check-input" id="is_site_active_cb">
                     <label class="form-check-label align-form-label mt-2" for="is_site_active_cb"><h6>Is Active</h6></label>
@@ -120,7 +112,7 @@
                     <option value="Site3"> IP3 </ option>
                 </ select>
                 <a href="" class="medium-margin" role="button"><i class="far fa-edit"></i></a> -->
-                <a href="" id="check_Auto_Run_DB_IP" class="medium-margin" role="button"><i class="far fa-check-square"></i></a>
+                <button id="check_Auto_Run_DB_IP" class="medium-margin"><i class="far fa-check-square"></i></button>
             </div>
         </div>
     </div>
