--- a/Source/templates/define_complex_net.html
+++ b/Source/templates/define_complex_net.html
@@ -15,7 +15,7 @@
             <div class="card-body">
                 <div class="form-inline">
                     <label for="" class="">System:</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="Link_System" class="form-control">
                         <option value="">sys1</option>
                         <option value="">sys2</option>
                         <option value="">sys3</option>
@@ -23,7 +23,7 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">Ext. simulation:</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="Link_Ext_Simulation" class="form-control">
                         <option value="">sim1</option>
                         <option value="">sim2</option>
                         <option value="">sim3</option>
@@ -40,15 +40,15 @@
             <div class="card-body">
                 <div class="form-inline">
                     <label for="">Watch:</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="Simulation_Watch" class="form-control">
                         <option value="">watch1</option>
                         <option value="">watch2</option>
                         <option value="">watch3</option>
                     </select>
                 </div>
                 <div class="form-inline">
-                    <label for="">DIC:</label>
-                    <select name="" id="" class="form-control">
+                    <label for="">DIS:</label>
+                    <select name="" id="Simulation_DIS" class="form-control">
                         <option value="">DIC1</option>
                         <option value="">DIC2</option>
                         <option value="">DIC3</option>
@@ -69,7 +69,7 @@
             <div class="card-body">
                 <div class="form-inline">
                     <label for="">Backup Env:</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="Backup_Env" class="form-control">
                         <option value="">env1</option>
                         <option value="">env2</option>
                         <option value="">env3</option>
@@ -96,7 +96,7 @@
                 <div class="card-body">
                     <div class="form-inline">
                         <label for="" class="">1</label>
-                        <select name="" id="" class="form-control">
+                        <select name="" id="Sensors1" class="form-control">
                             <option value="">sensor1</option>
                             <option value="">sensor2</option>
                             <option value="">sensor3</option>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="form-inline">
                         <label for="" class="">2</label>
-                        <select name="" id="" class="form-control">
+                        <select name="" id="Sensors2" class="form-control">
                             <option value="">sensor1</option>
                             <option value="">sensor2</option>
                             <option value="">sensor3</option>
@@ -112,14 +112,14 @@
                     </div>
                     <div class="form-inline">
                         <label for="" class="">3</label>
-                        <select name="" id="" class="form-control">
+                        <select name="" id="Sensors3" class="form-control">
                             <option value="">sensor1</option>
                             <option value="">sensor2</option>
                             <option value="">sensor3</option>
                         </select>
                     </div>
                     <div class="form-inline">
-                        <label for="" class="">4</label>
+                        <label for="" class="Sensors4">4</label>
                         <select name="" id="" class="form-control">
                             <option value="">sensor1</option>
                             <option value="">sensor2</option>
@@ -135,7 +135,7 @@
                 <div class="card-body">
                     <div class="form-inline">
                         <label for="" class="">1</label>
-                        <select name="" id="" class="form-control">
+                        <select name="" id="Glasses1" class="form-control">
                             <option value="">sensor1</option>
                             <option value="">sensor2</option>
                             <option value="">sensor3</option>
@@ -153,7 +153,7 @@
             <div class="card-body">
                 <div class="form-inline">
                     <label for="" class="">1</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="Sord1" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">2</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="Sord2" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -169,6 +169,14 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">3</label>
+                    <select name="" id="Sord3" class="form-control">
+                        <option value="">sensor1</option>
+                        <option value="">sensor2</option>
+                        <option value="">sensor3</option>
+                    </select>
+                </div>
+                <div class="form-inline">
+                    <label for="" class="Sord4">4</label>
                     <select name="" id="" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
@@ -176,15 +184,7 @@
                     </select>
                 </div>
                 <div class="form-inline">
-                    <label for="" class="">4</label>
-                    <select name="" id="" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">5</label>
+                    <label for="" class="Sord5">5</label>
                     <select name="" id="" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
@@ -193,7 +193,23 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">6</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="Sord6" class="form-control">
+                        <option value="">sensor1</option>
+                        <option value="">sensor2</option>
+                        <option value="">sensor3</option>
+                    </select>
+                </div>
+                <div class="form-inline">
+                    <label for="" class="">7</label>
+                    <select name="" id="Sord7" class="form-control">
+                        <option value="">sensor1</option>
+                        <option value="">sensor2</option>
+                        <option value="">sensor3</option>
+                    </select>
+                </div>
+                <div class="form-inline">
+                    <label for="" class="">8</label>
+                    <select name="" id="Sord8" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -210,7 +226,7 @@
             <div class="card-body">
                 <div class="form-inline">
                     <label for="" class="">1</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="look1" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -218,7 +234,7 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">2</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="look2" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -226,7 +242,7 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">3</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="look3" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -234,7 +250,7 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">4</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="look4" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -251,7 +267,7 @@
             <div class="card-body">
                 <div class="form-inline">
                     <label for="" class="">1</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="Hear1" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -259,7 +275,7 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">2</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="Hear2" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -267,14 +283,14 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">3</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="Hear3" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
                     </select>
                 </div>
                 <div class="form-inline">
-                    <label for="" class="">4</label>
+                    <label for="" class="Hear4">4</label>
                     <select name="" id="" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
@@ -283,7 +299,7 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">5</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="Hear5" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -291,7 +307,7 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">6</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="Hear6" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -299,7 +315,7 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">7</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="Hear7" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -307,7 +323,7 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">8</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="Hear8" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -315,7 +331,7 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">9</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="Hear9" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -323,7 +339,7 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">10</label>
-                    <select name="" id="" class="form-control">
+                    <select name="" id="Hear10" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -335,7 +351,7 @@
 </div>
 
 <div class="row sensors_div_line2">
-    
-    
+
+
 </div>
 {% endblock %}
