define complex net js

--- a/Source/templates/define_complex_net.html
+++ b/Source/templates/define_complex_net.html
@@ -9,7 +9,7 @@
  <div class="row external_simulators_div">
     <div class="col-4">
         <div class="card">
-            <div class="card-header">
+            <div id = "HeaderLink" class="card-header">
                 Link
             </div>
             <div class="card-body">
@@ -34,7 +34,7 @@
     </div>
     <div class="col-4">
         <div class="card">
-            <div class="card-header">
+            <div id = "HeaderSimulation" class="card-header">
                 Simulation
             </div>
             <div class="card-body">
@@ -63,8 +63,8 @@
     </div>
     <div class="col-4">
         <div class="card">
-            <div class="card-header">
-                D
+            <div id = "HeaderConfigC" class="card-header">
+                C
             </div>
             <div class="card-body">
                 <div class="form-inline">
@@ -90,13 +90,13 @@
     <div class="col-3">
         <div>
             <div class="card">
-                <div class="card-header">
+                <div id="HeaderSensors" class="card-header">
                     Sensors
                 </div>
                 <div class="card-body">
                     <div class="form-inline">
                         <label for="" class="">1</label>
-                        <select name="" id="Sensors1" class="form-control">
+                        <select name="Sensor" id="Sensors1" class="form-control">
                             <option value="">sensor1</option>
                             <option value="">sensor2</option>
                             <option value="">sensor3</option>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="form-inline">
                         <label for="" class="">2</label>
-                        <select name="" id="Sensors2" class="form-control">
+                        <select name="Sensor" id="Sensors2" class="form-control">
                             <option value="">sensor1</option>
                             <option value="">sensor2</option>
                             <option value="">sensor3</option>
@@ -112,15 +112,15 @@
                     </div>
                     <div class="form-inline">
                         <label for="" class="">3</label>
-                        <select name="" id="Sensors3" class="form-control">
+                        <select name="Sensor" id="Sensors3" class="form-control">
                             <option value="">sensor1</option>
                             <option value="">sensor2</option>
                             <option value="">sensor3</option>
                         </select>
                     </div>
                     <div class="form-inline">
-                        <label for="" class="Sensors4">4</label>
-                        <select name="" id="" class="form-control">
+                        <label for="" class="">4</label>
+                        <select name="Sensor" id="Sensors4" class="form-control">
                             <option value="">sensor1</option>
                             <option value="">sensor2</option>
                             <option value="">sensor3</option>
@@ -129,13 +129,13 @@
                 </div>
             </div>
             <div class="card nested-card">
-                <div class="card-header">
+                <div id="HeaderGlasses" class="card-header">
                     Glasses
                 </div>
                 <div class="card-body">
                     <div class="form-inline">
                         <label for="" class="">1</label>
-                        <select name="" id="Glasses1" class="form-control">
+                        <select name="Glasses" id="Glasses1" class="form-control">
                             <option value="">sensor1</option>
                             <option value="">sensor2</option>
                             <option value="">sensor3</option>
@@ -147,13 +147,13 @@
     </div>
     <div class="col-3">
         <div class="card">
-            <div class="card-header">
+            <div id="HeaderSord" class="card-header">
                 Sord
             </div>
             <div class="card-body">
                 <div class="form-inline">
                     <label for="" class="">1</label>
-                    <select name="" id="Sord1" class="form-control">
+                    <select name="Sord" id="Sord1" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">2</label>
-                    <select name="" id="Sord2" class="form-control">
+                    <select name="Sord" id="Sord2" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -169,23 +169,23 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">3</label>
-                    <select name="" id="Sord3" class="form-control">
+                    <select name="Sord" id="Sord3" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
                     </select>
                 </div>
                 <div class="form-inline">
-                    <label for="" class="Sord4">4</label>
-                    <select name="" id="" class="form-control">
+                    <label for="" class="">4</label>
+                    <select name="Sord" id="Sord4" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
                     </select>
                 </div>
                 <div class="form-inline">
-                    <label for="" class="Sord5">5</label>
-                    <select name="" id="" class="form-control">
+                    <label for="" class="">5</label>
+                    <select name="Sord" id="Sord5" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -193,7 +193,7 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">6</label>
-                    <select name="" id="Sord6" class="form-control">
+                    <select name="Sord" id="Sord6" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -201,7 +201,7 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">7</label>
-                    <select name="" id="Sord7" class="form-control">
+                    <select name="Sord" id="Sord7" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -209,7 +209,7 @@
                 </div>
                 <div class="form-inline">
                     <label for="" class="">8</label>
-                    <select name="" id="Sord8" class="form-control">
+                    <select name="Sord" id="Sord8" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -220,7 +220,7 @@
     </div>
     <div class="col-3">
         <div class="card">
-            <div class="card-header">
+            <div id="HeaderWatch" class="card-header">
                 Watch
             </div>
             <div class="card-body">
@@ -261,7 +261,7 @@
     </div>
     <div class="col-3">
         <div class="card">
-            <div class="card-header">
+            <div id="HeaderHear" class="card-header">
                 Hear
             </div>
             <div class="card-body">
@@ -290,8 +290,8 @@
                     </select>
                 </div>
                 <div class="form-inline">
-                    <label for="" class="Hear4">4</label>
-                    <select name="" id="" class="form-control">
+                    <label for="" class="">4</label>
+                    <select name="" id="Hear4" class="form-control">
                         <option value="">sensor1</option>
                         <option value="">sensor2</option>
                         <option value="">sensor3</option>
@@ -354,4 +354,11 @@
 
 
 </div>
+{% endblock %}
+{%block scripts%}
+
+<script src="../static/js/default_skin.js"></script>
+<script src="../static/js/OctoUtils.js"></script>
+<script src="../static/js/define_complex_net.js"></script>
+
 {% endblock %}
